force-app/main/default/objects/AssetCheckpoint__c/AssetCheckpoint__c.object-meta.xml
<CustomObject>
    <label>Asset Checkpoint</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Checkpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Checkpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>