force-app/main/default/objects/AssetCheckpoint__c/fields/AlreadyAnswered__c.field-meta.xml
<CustomField>
    <fullName>AlreadyAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already answered?</label>
    <type>Checkbox</type>
</CustomField>