force-app/main/default/objects/AssetCheckpoint__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordType.Name</field>
            <operation>equals</operation>
            <value>Book</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Checkpoints</relationshipLabel>
    <relationshipName>AssetCheckpoints</relationshipName>
    <type>Lookup</type>
</CustomField>