force-app/main/default/objects/AssetCheckpoint__c/fields/BookCheckpoint__c.field-meta.xml
<CustomField>
    <fullName>BookCheckpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Checkpoint</label>
    <referenceTo>BookCheckpoint__c</referenceTo>
    <relationshipLabel>Asset Checkpoints</relationshipLabel>
    <relationshipName>AssetCheckpoints</relationshipName>
    <type>Lookup</type>
</CustomField>